Text formatting on mobile devices fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,10 @@ body{
 }
 
 @media (max-width: 1200px) {
+
+	html {
+		overflow: hidden;
+	}
 	
 	body {
         height:100vh;
@@ -153,6 +157,33 @@ body{
 
 	.navbar {
 		font-size: 1.25em;
+	}
+}
+
+@media (max-width: 500px) {
+
+	html {
+		overflow: hidden;
+	}
+	
+	body {
+        height:100vh;
+	overflow-y: scroll;
+    -webkit-overflow-scrolling:touch;
+    }
+
+	#name {
+		font-size: 5em;
+		grid-column-start: 1;
+		grid-column-end: 5;
+	}
+
+	#subtitle {
+		font-size: 2.5em;
+	}
+
+	.navbar {
+		font-size: 3em;
 	}
 }
 
